--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,11 +5,11 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇦 加拿大-3.01MB/s(Youtube:不良林), server: 134.195.196.89, port: 7001, type: ss, cipher: aes-256-gcm, password: RexnBgU7EV5ADxG}
-  - {name: 🇨🇦 加拿大-2.93MB/s(Youtube:不良林), server: 134.195.196.89, port: 6697, type: ss, cipher: aes-256-gcm, password: TEzjfAYq2IjtuoS}
-  - {name: 🇨🇳 中国-286.5KB/s(Youtube:不良林), server: 120.233.150.146, port: 65031, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 120.233.150.146}}
-  - {name: 🇨🇳 中国-396.9KB/s(Youtube:不良林), server: best01.downloadmovie.cn, port: 65090, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: best01.downloadmovie.cn}}
-  - {name: 🇨🇦 加拿大-2.86MB/s(Youtube:不良林), server: 134.195.196.89, port: 8118, type: ss, cipher: aes-256-gcm, password: cdBIDV42DCwnfIN}
+  - {name: 🇨🇳 中国-188.2KB/s(Youtube:不良林), server: 120.233.150.146, port: 65095, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 120.233.150.146}}
+  - {name: 🇨🇦 加拿大-2.16MB/s(Youtube:不良林), server: 134.195.196.89, port: 8008, type: ss, cipher: aes-256-gcm, password: XKFKl2rULjIp74}
+  - {name: 🇭🇰 香港-3.66MB/s(Youtube:不良林), server: 47.243.227.118, port: 46108, type: vmess, uuid: 51f7927b-e4ae-44cc-acc8-605f2b662e2a, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: http, http-opts: {method: GET, path: [/], headers: {Host: [47.243.227.118]}}}
+  - {name: 🇺🇸 美国-4.33MB/s(Youtube:不良林), server: s1.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s1.hazz.win, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-184.5KB/s(Youtube:不良林), server: best02.downloadmovie.cn, port: 65091, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: best02.downloadmovie.cn}}
   - {name: 🇨🇳 中国-345.9KB/s(Youtube:不良林), server: best04.downloadmovie.cn, port: 65070, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: best04.downloadmovie.cn}}
   - {name: 🇨🇳 中国-3.92MB/s(Youtube:不良林), server: cm.spacez.cloud, port: 30003, type: trojan, password: c9a3a61d-5d49-4158-9e60-6fa32684b122, sni: cm.spacez.cloud, skip-cert-verify: true}
   - {name: 🇨🇳 中国-1.66MB/s(Youtube:不良林), server: cm.spacez.cloud, port: 30002, type: trojan, password: c9a3a61d-5d49-4158-9e60-6fa32684b122, sni: cm.spacez.cloud, skip-cert-verify: true}
@@ -21,11 +21,11 @@ proxy-groups:
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇦 加拿大-3.01MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.93MB/s(Youtube:不良林)
-      - 🇨🇳 中国-286.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-396.9KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.86MB/s(Youtube:不良林)
+      - 🇨🇳 中国-188.2KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.16MB/s(Youtube:不良林)
+      - 🇭🇰 香港-3.66MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.33MB/s(Youtube:不良林)
+      - 🇨🇳 中国-184.5KB/s(Youtube:不良林)
       - 🇨🇳 中国-345.9KB/s(Youtube:不良林)
       - 🇨🇳 中国-3.92MB/s(Youtube:不良林)
       - 🇨🇳 中国-1.66MB/s(Youtube:不良林)
@@ -36,11 +36,11 @@ proxy-groups:
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇦 加拿大-3.01MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.93MB/s(Youtube:不良林)
-      - 🇨🇳 中国-286.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-396.9KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.86MB/s(Youtube:不良林)
+      - 🇨🇳 中国-188.2KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.16MB/s(Youtube:不良林)
+      - 🇭🇰 香港-3.66MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.33MB/s(Youtube:不良林)
+      - 🇨🇳 中国-184.5KB/s(Youtube:不良林)
       - 🇨🇳 中国-345.9KB/s(Youtube:不良林)
       - 🇨🇳 中国-3.92MB/s(Youtube:不良林)
       - 🇨🇳 中国-1.66MB/s(Youtube:不良林)
@@ -52,11 +52,11 @@ proxy-groups:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇦 加拿大-3.01MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.93MB/s(Youtube:不良林)
-      - 🇨🇳 中国-286.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-396.9KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.86MB/s(Youtube:不良林)
+      - 🇨🇳 中国-188.2KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.16MB/s(Youtube:不良林)
+      - 🇭🇰 香港-3.66MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.33MB/s(Youtube:不良林)
+      - 🇨🇳 中国-184.5KB/s(Youtube:不良林)
       - 🇨🇳 中国-345.9KB/s(Youtube:不良林)
       - 🇨🇳 中国-3.92MB/s(Youtube:不良林)
       - 🇨🇳 中国-1.66MB/s(Youtube:不良林)
@@ -66,17 +66,18 @@ proxy-groups:
     type: select
     proxies:
       - 🎯 全球直连
+      - 🇭🇰 香港-3.66MB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇦 加拿大-3.01MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.93MB/s(Youtube:不良林)
-      - 🇨🇳 中国-286.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-396.9KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.86MB/s(Youtube:不良林)
+      - 🇨🇳 中国-188.2KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.16MB/s(Youtube:不良林)
+      - 🇭🇰 香港-3.66MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.33MB/s(Youtube:不良林)
+      - 🇨🇳 中国-184.5KB/s(Youtube:不良林)
       - 🇨🇳 中国-345.9KB/s(Youtube:不良林)
       - 🇨🇳 中国-3.92MB/s(Youtube:不良林)
       - 🇨🇳 中国-1.66MB/s(Youtube:不良林)
@@ -87,11 +88,11 @@ proxy-groups:
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇦 加拿大-3.01MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.93MB/s(Youtube:不良林)
-      - 🇨🇳 中国-286.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-396.9KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.86MB/s(Youtube:不良林)
+      - 🇨🇳 中国-188.2KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.16MB/s(Youtube:不良林)
+      - 🇭🇰 香港-3.66MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.33MB/s(Youtube:不良林)
+      - 🇨🇳 中国-184.5KB/s(Youtube:不良林)
       - 🇨🇳 中国-345.9KB/s(Youtube:不良林)
       - 🇨🇳 中国-3.92MB/s(Youtube:不良林)
       - 🇨🇳 中国-1.66MB/s(Youtube:不良林)
@@ -103,11 +104,11 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇦 加拿大-3.01MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.93MB/s(Youtube:不良林)
-      - 🇨🇳 中国-286.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-396.9KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.86MB/s(Youtube:不良林)
+      - 🇨🇳 中国-188.2KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.16MB/s(Youtube:不良林)
+      - 🇭🇰 香港-3.66MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.33MB/s(Youtube:不良林)
+      - 🇨🇳 中国-184.5KB/s(Youtube:不良林)
       - 🇨🇳 中国-345.9KB/s(Youtube:不良林)
       - 🇨🇳 中国-3.92MB/s(Youtube:不良林)
       - 🇨🇳 中国-1.66MB/s(Youtube:不良林)
@@ -128,11 +129,11 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇦 加拿大-3.01MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.93MB/s(Youtube:不良林)
-      - 🇨🇳 中国-286.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-396.9KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.86MB/s(Youtube:不良林)
+      - 🇨🇳 中国-188.2KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.16MB/s(Youtube:不良林)
+      - 🇭🇰 香港-3.66MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.33MB/s(Youtube:不良林)
+      - 🇨🇳 中国-184.5KB/s(Youtube:不良林)
       - 🇨🇳 中国-345.9KB/s(Youtube:不良林)
       - 🇨🇳 中国-3.92MB/s(Youtube:不良林)
       - 🇨🇳 中国-1.66MB/s(Youtube:不良林)
