--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,115 +5,114 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇳 中国-188.2KB/s(Youtube:不良林), server: 120.233.150.146, port: 65095, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 120.233.150.146}}
-  - {name: 🇨🇦 加拿大-2.16MB/s(Youtube:不良林), server: 134.195.196.89, port: 8008, type: ss, cipher: aes-256-gcm, password: XKFKl2rULjIp74}
-  - {name: 🇭🇰 香港-3.66MB/s(Youtube:不良林), server: 47.243.227.118, port: 46108, type: vmess, uuid: 51f7927b-e4ae-44cc-acc8-605f2b662e2a, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: http, http-opts: {method: GET, path: [/], headers: {Host: [47.243.227.118]}}}
-  - {name: 🇺🇸 美国-4.33MB/s(Youtube:不良林), server: s1.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s1.hazz.win, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-184.5KB/s(Youtube:不良林), server: best02.downloadmovie.cn, port: 65091, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: best02.downloadmovie.cn}}
-  - {name: 🇨🇳 中国-345.9KB/s(Youtube:不良林), server: best04.downloadmovie.cn, port: 65070, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: best04.downloadmovie.cn}}
-  - {name: 🇨🇳 中国-3.92MB/s(Youtube:不良林), server: cm.spacez.cloud, port: 30003, type: trojan, password: c9a3a61d-5d49-4158-9e60-6fa32684b122, sni: cm.spacez.cloud, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-1.66MB/s(Youtube:不良林), server: cm.spacez.cloud, port: 30002, type: trojan, password: c9a3a61d-5d49-4158-9e60-6fa32684b122, sni: cm.spacez.cloud, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-342.5KB/s(Youtube:不良林), server: best04.downloadmovie.cn, port: 65093, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: best04.downloadmovie.cn}}
+  - {name: 🇨🇳 (已存活1天)中国-3.58MB/s(Youtube:不良林), server: in-us-1.onebox6.org, port: 38401, type: vmess, uuid: 79386685-16da-327c-9e14-aa6d702d86bc, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /hls/cctv5phd.m3u8, ws-headers: {Host: in-us-1.onebox6.org}}
+  - {name: 🇨🇦 加拿大-2.99MB/s(Youtube:不良林), server: 134.195.196.89, port: 5000, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
+  - {name: 🇨🇦 加拿大-2.67MB/s(Youtube:不良林), server: 134.195.196.89, port: 5601, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
+  - {name: 🇨🇦 加拿大-2.98MB/s(Youtube:不良林), server: 134.195.196.89, port: 6379, type: ss, cipher: aes-256-gcm, password: zDNVedRFPQexG9v}
   - {name: 🇹🇭 泰国-1.35MB/s(Youtube:不良林), server: 119.59.116.248, port: 17159, type: trojan, password: PHnvNV7HGp, skip-cert-verify: true}
-  - {name: 未知国家-2.66MB/s(Youtube:不良林), server: 207.2.120.172, port: 443, type: trojan, password: 34c2ebbd-8ecf-3c1c-a945-19cd394a3e43, skip-cert-verify: true}
+  - {name: 🇦🇺 澳大利亚-930.3KB/s(Youtube:不良林), server: 185.167.116.250, port: 9006, type: ss, cipher: aes-256-cfb, password: FAdUvMJUq5vDgKEq}
+  - {name: 🇦🇺 澳大利亚-1.32MB/s(Youtube:不良林), server: 185.167.116.250, port: 9043, type: ss, cipher: aes-256-cfb, password: HSZuyJQcWe8dxNdF}
+  - {name: 🇨🇦 加拿大-999.0KB/s(Youtube:不良林), server: 138.197.166.205, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
+  - {name: 🇨🇳 中国-855.6KB/s(Youtube:不良林), server: ingress-i1.onebox6.org, port: 38701, type: vmess, uuid: 79386685-16da-327c-9e14-aa6d702d86bc, alterId: 1, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /hls/cctv5phd.m3u8, ws-headers: {Host: ingress-i1.onebox6.org}}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-188.2KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.16MB/s(Youtube:不良林)
-      - 🇭🇰 香港-3.66MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.33MB/s(Youtube:不良林)
-      - 🇨🇳 中国-184.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-345.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.92MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.66MB/s(Youtube:不良林)
+      - 🇨🇳 中国-342.5KB/s(Youtube:不良林)
+      - 🇨🇳 (已存活1天)中国-3.58MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.99MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.67MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.98MB/s(Youtube:不良林)
       - 🇹🇭 泰国-1.35MB/s(Youtube:不良林)
-      - 未知国家-2.66MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-930.3KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.32MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-999.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-855.6KB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇳 中国-188.2KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.16MB/s(Youtube:不良林)
-      - 🇭🇰 香港-3.66MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.33MB/s(Youtube:不良林)
-      - 🇨🇳 中国-184.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-345.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.92MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.66MB/s(Youtube:不良林)
+      - 🇨🇳 中国-342.5KB/s(Youtube:不良林)
+      - 🇨🇳 (已存活1天)中国-3.58MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.99MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.67MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.98MB/s(Youtube:不良林)
       - 🇹🇭 泰国-1.35MB/s(Youtube:不良林)
-      - 未知国家-2.66MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-930.3KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.32MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-999.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-855.6KB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-188.2KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.16MB/s(Youtube:不良林)
-      - 🇭🇰 香港-3.66MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.33MB/s(Youtube:不良林)
-      - 🇨🇳 中国-184.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-345.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.92MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.66MB/s(Youtube:不良林)
+      - 🇨🇳 中国-342.5KB/s(Youtube:不良林)
+      - 🇨🇳 (已存活1天)中国-3.58MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.99MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.67MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.98MB/s(Youtube:不良林)
       - 🇹🇭 泰国-1.35MB/s(Youtube:不良林)
-      - 未知国家-2.66MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-930.3KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.32MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-999.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-855.6KB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
-      - 🇭🇰 香港-3.66MB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇳 中国-188.2KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.16MB/s(Youtube:不良林)
-      - 🇭🇰 香港-3.66MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.33MB/s(Youtube:不良林)
-      - 🇨🇳 中国-184.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-345.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.92MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.66MB/s(Youtube:不良林)
+      - 🇨🇳 中国-342.5KB/s(Youtube:不良林)
+      - 🇨🇳 (已存活1天)中国-3.58MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.99MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.67MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.98MB/s(Youtube:不良林)
       - 🇹🇭 泰国-1.35MB/s(Youtube:不良林)
-      - 未知国家-2.66MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-930.3KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.32MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-999.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-855.6KB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇳 中国-188.2KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.16MB/s(Youtube:不良林)
-      - 🇭🇰 香港-3.66MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.33MB/s(Youtube:不良林)
-      - 🇨🇳 中国-184.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-345.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.92MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.66MB/s(Youtube:不良林)
+      - 🇨🇳 中国-342.5KB/s(Youtube:不良林)
+      - 🇨🇳 (已存活1天)中国-3.58MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.99MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.67MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.98MB/s(Youtube:不良林)
       - 🇹🇭 泰国-1.35MB/s(Youtube:不良林)
-      - 未知国家-2.66MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-930.3KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.32MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-999.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-855.6KB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-188.2KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.16MB/s(Youtube:不良林)
-      - 🇭🇰 香港-3.66MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.33MB/s(Youtube:不良林)
-      - 🇨🇳 中国-184.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-345.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.92MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.66MB/s(Youtube:不良林)
+      - 🇨🇳 中国-342.5KB/s(Youtube:不良林)
+      - 🇨🇳 (已存活1天)中国-3.58MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.99MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.67MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.98MB/s(Youtube:不良林)
       - 🇹🇭 泰国-1.35MB/s(Youtube:不良林)
-      - 未知国家-2.66MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-930.3KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.32MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-999.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-855.6KB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -129,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-188.2KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.16MB/s(Youtube:不良林)
-      - 🇭🇰 香港-3.66MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.33MB/s(Youtube:不良林)
-      - 🇨🇳 中国-184.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-345.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.92MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.66MB/s(Youtube:不良林)
+      - 🇨🇳 中国-342.5KB/s(Youtube:不良林)
+      - 🇨🇳 (已存活1天)中国-3.58MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.99MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.67MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.98MB/s(Youtube:不良林)
       - 🇹🇭 泰国-1.35MB/s(Youtube:不良林)
-      - 未知国家-2.66MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-930.3KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.32MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-999.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-855.6KB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
